# linkedin-cleaner

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  unwanted.csv
data/: Ad_Targeting.csv  Certifications.csv  Company Follows.csv  Connections.csv  Education.csv  Email Addresses.csv  Endorsement_Given_Info.csv  Endorsement_Received_Info.csv  Events.csv  Invitations.csv  Languages.csv  Learning.csv  PhoneNumbers.csv  Positions.csv  Profile.csv  Projects.csv  Receipts.csv  Receipts_v2.csv  Registration.csv  Rich_Media.csv  SavedJobAlerts.csv  Skills.csv  Whatsapp Phone Numbers.csv  coach_messages.csv  messages.csv
data/Articles/Articles/: advanced-game-theory-blockchain-resource-mining-altug-tatlisu-rt61f.html  ai-blockchain-financial-revolution-altug-tatlisu-sue9f.html  ai-generated-smart-contracts-decentralized-autonomous-altug-tatlisu-r4zec.html  ai-powered-daos-shaping-future-decentralized-altug-tatlisu-qmwvf.html  applications-decentralized-exchanges-pooled-trading-new-altug-tatlisu-tw8hf.html  artificial-intelligence-driven-daos-environmental-climate-tatlisu-5rcjf.html  behind-screen-anonymity-exposing-dark-side-altug-tatlisu-jl1nf.html  billion-dollar-question-can-blockchain-technology-rid-altug-tatlisu-jvdzf.html  bitcoin-lightning-network-temporary-fix-fundamental-flaws-tatlisu-caezf.html  (+66 more)
data/Services Marketplace/: Providers.csv
src/: lib.rs  main.rs
src/analyzer/: mod.rs  reporter.rs  scorer.rs
src/automation/: browser.rs  mod.rs
src/filters/: mod.rs
src/models/: config.rs  follower.rs  mod.rs
src/parser/: csv_parser.rs  mod.rs
