[package]
name = "linkedin-cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
thiserror = "1.0"
toml = "0.8"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
headless_chrome = "1.0"